add popup styling

--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -8,6 +8,7 @@
   display: grid;
   place-items: center;
   background-color: #AEF359;
+  padding: 10px;
 
   .popup-container {
     background-color: #FFFFFF;
@@ -15,3 +16,4 @@
     border-radius: 3rem;
   }
 }
+
