add question field

--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -9,6 +9,7 @@
   place-items: center;
   background-color: #AEF359;
   padding: 10px;
+  overflow-y: scroll;
 
   .popup-container {
     background-color: #FFFFFF;
