--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -7,7 +7,7 @@
   height: 100vh;
   display: grid;
   place-items: center;
-  background-color: #AEF359;
+  background-color: rgba(237, 245, 225, 0.5);;
   padding: 10px;
   overflow-y: scroll;
 
