--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #5CDB95#EDF5E1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #5CDB95;
+  border-radius: 20px;
+}
