--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -1,4 +1,5 @@
 .wrapper-popup {
+  padding: 80px 10px 10px 10px;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,7 +9,6 @@
   display: grid;
   place-items: center;
   background-color: rgba(237, 245, 225, 0.5);;
-  padding: 10px;
   overflow-y: scroll;
 
   .popup-container {
