--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,11 @@
   background-color: #5CDB95;
   border-radius: 20px;
 }
+
+.input-checkbox {
+  @apply border-dark text-dark focus:ring-offset-0 focus:ring-transparent rounded w-6 h-6 mr-[5px];
+}
+
+.input-label:hover {
+  text-shadow: 0 0 1px white;
+}
