--- a/src/App.scss
+++ b/src/App.scss
@@ -30,3 +30,17 @@ body {
 .read-the-docs {
   color: #888;
 }
+
+.sidebar {
+  flex-basis: var(--filter-sidebar-width);
+  will-change: margin-right;
+  transition: margin-right 0.3s ease-in-out;
+}
+
+.sidebar[data-open="true"] {
+  margin-right: 0;
+}
+
+.sidebar[data-open="false"] {
+  margin-right: calc(var(--filter-sidebar-width) * -1 + 65px);
+}
