--- a/src/components/Popup/Comments.scss
+++ b/src/components/Popup/Comments.scss
@@ -18,3 +18,69 @@
     }
   }
 }
+
+.switch {
+  --dot-size: 20px;
+  --dot-distance: 10px;
+  --switch-width: 70px;
+  --switch-height: 35px;
+  --easing: cubic-bezier(0.9, 0.15, 0.4, 0.55);
+
+  grid-column: 1 / 2;
+  display: grid;
+  grid-template-columns: repeat(2, min-content);
+  justify-self: center;
+
+  input {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    z-index: -1000;
+  }
+
+  label {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    width: var(--switch-width);
+    height: var(--switch-height);
+    position: relative;
+    border-radius: 1.6rem;
+    background: #05386b;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: var(--dot-distance);
+      width: var(--dot-size);
+      height: var(--dot-size);
+      border-radius: 50%;
+      background: #8ee4af;
+      transition: all 0.3s var(--easing);
+    }
+
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      border-radius: inherit;
+      background: linear-gradient(130deg, #facc15 0%, #ec4899 100%);
+      opacity: 0;
+      transition: all 0.3s var(--easing);
+    }
+  }
+
+  & input:checked {
+    & ~ label {
+      &::before {
+        opacity: 0.9;
+      }
+
+      &::after {
+        left: calc(var(--switch-width) - var(--dot-distance));
+        transform: translateX(-100%);
+        background: #fff;
+      }
+    }
+  }
+}
