--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   border-radius: 20px;
 }
 
+#focus-outline:focus {
+  outline: 'none';
+}
+
 .input-checkbox {
   @apply border-dark text-dark focus:ring-offset-0 focus:ring-transparent rounded w-6 h-6 mr-[5px];
 }
