--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -23,7 +23,7 @@ $easing: cubic-bezier(0.76, 0, 0.24, 1);
 }
 
 .popup {
-  &__tabs {
+    &__tabs {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,5 +96,38 @@ $easing: cubic-bezier(0.76, 0, 0.24, 1);
 @for $i from 0 through 20 {
   .popup__tab-text-letter:nth-child(#{$i + 1}) {
     transition-delay: $delay * $i;
+  }
+}
+
+@media screen and (max-width:520px){
+  .wrapper-popup {
+    .popup-container {
+      background-color: #FFFFFF;
+      padding: 20px;
+      border-radius: 3rem;
+    }
+  }
+  .popup {
+    &__tab {
+      position: relative;
+      border: none;
+        &-text {
+          display: inline-block;
+          $font-size: 1rem;
+          font-size: $font-size;
+          line-height: $font-size * 1.5;
+          height: $font-size * 1.5;
+          text-decoration: none;
+          overflow: hidden;
+          color: #1a1a1a;
+      }
+    }
+    &__tabs-info {
+      &::after {
+        width: 20px;
+        height: 40px;
+        margin: 0 10px;
+      }
+    }
   }
 }
