--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,14 @@
 html {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   box-sizing: border-box;
 }
 
 body {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
